# lore-the-publicist-agi

./: .gitignore  LICENSE.md  README.md  flake.nix  lore-the-publicist-shell.nix  lore.py  nix-pkgs.nix  nix-shell-entry.sh  pyproject.toml
