[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lore"
version = "0.0.0"
description = "LORE mashup of whisper, GPT-Neo and bark"
readme = "README.md"
requires-python = ">=3.8"
authors =  [
    {name = "Raf Gemmail", email = "rafiq@dreamthought.com"},
]
license = {file = "LICENSE"}

dependencies = [
    "boto3",
    "suno-bark @ git+https://github.com/suno-ai/bark.git",
    "encodec",
    "funcy",
    "numpy",
    "scipy",
    "tokenizers",
    "torch",
    "tqdm",
    "transformers",
    "shutup",
    "openai-whisper",
    "sounddevice",
#    "xformers",
#    "xformers @ https://github.com/facebookresearch/xformers",
]

[project.urls]
source = "https://github.com/fiq/lore"

